# cocos2d-x-3rd-party-libs-bin

./: .gitignore  CMakeLists.txt
android-specific/mpg123/: CMakeLists.txt  config.h  decode.h  equalizer.c  mpg123lib_intern.h  synth_arm.S  update.js
android-specific/openal/: CMakeLists.txt
android-specific/openal/prebuilt/android/: Android.mk
android-specific/vorbis/: CMakeLists.txt
android-specific/vorbis/libvorbis-stream/: vorbis-fileinputstream.c  vorbis-fileoutputstream.c
